--- a/index.html
+++ b/index.html
@@ -28,19 +28,96 @@
         />
         <span class="header__line"></span>
       </header>
-      <section class="profile">
-        <div class="avatar profile__image">
-          <img src="./images/jacques-cousteau.jpg" class="avatar__image" />
-        </div>
-        <div class="profile__info">
-          <div class="profile__name-pen">
-            <p class="profile__name">JacquesCousteau</p>
-            <img src="./images/pen.svg" class="profile__pen" />
+      <main>
+        <section class="profile">
+          <div class="avatar profile__image">
+            <img
+              src="./images/jacques-cousteau.jpg"
+              class="avatar__image"
+              alt="profile image of JacquesCousteau"
+            />
           </div>
-          <p class="profile__name-tag">Explorer</p>
-        </div>
-        <img src="./images/plus.svg" class="profile__add-button" />
-      </section>
+          <div class="profile__info">
+            <div class="profile__name-pen">
+              <p class="profile__name">JacquesCousteau</p>
+              <img src="./images/pen.svg" class="profile__pen" />
+            </div>
+            <p class="profile__name-tag">Explorer</p>
+          </div>
+          <img
+            src="./images/plus.svg"
+            class="profile__add-button"
+            alt="Add image"
+          />
+        </section>
+        <section class="collection">
+          <div class="card">
+            <img
+              src="./images/yosemite-valley.jpg"
+              class="card__image"
+              alt="Yosemite"
+            />
+            <div class="card__label">
+              <p class="card__label-text">Yosemite Valley</p>
+              <img src="./images/heart.svg" class="card__heart" />
+            </div>
+          </div>
+          <div class="card">
+            <img
+              src="./images/lake-louise.png"
+              class="card__image"
+              alt="Lake Louise"
+            />
+            <div class="card__label">
+              <p class="card__label-text">Lake Louise</p>
+              <img src="./images/heart.svg" class="card__heart" />
+            </div>
+          </div>
+          <div class="card">
+            <img
+              src="./images/bald-mountains.png"
+              class="card__image"
+              alt="Bald Mountains"
+            />
+            <div class="card__label">
+              <p class="card__label-text">Bald Mountains</p>
+              <img src="./images/heart.svg" class="card__heart" />
+            </div>
+          </div>
+          <div class="card">
+            <img src="./images/latemar.png" class="card__image" alt="Latemar" />
+            <div class="card__label">
+              <p class="card__label-text">Latemar</p>
+              <img src="./images/heart.svg" class="card__heart" />
+            </div>
+          </div>
+          <div class="card">
+            <img
+              src="./images/vanoise-national-park.png"
+              class="card__image"
+              alt="Vanoise National Park"
+            />
+            <div class="card__label">
+              <p class="card__label-text">Vanoise National Park</p>
+              <img src="./images/heart.svg" class="card__heart" />
+            </div>
+          </div>
+          <div class="card">
+            <img
+              src="./images/lago-di-braies.png"
+              class="card__image"
+              alt="Lago di Braies"
+            />
+            <div class="card__label">
+              <p class="card__label-text">Lago di Braies</p>
+              <img src="./images/heart.svg" class="card__heart" />
+            </div>
+          </div>
+        </section>
+      </main>
+      <footer class="footer">
+        <p class="footer__text">© 2022 Around The U.S.</p>
+      </footer>
     </div>
   </body>
 </html>
