--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             alt="Add image"
           />
         </section>
-        <section class="collection">
+        <section class="collection main__collection">
           <div class="card">
             <img
               src="./images/yosemite-valley.jpg"
