--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
     <title>Practicum Coffee Shop</title>
   </head>
   <body class="body">
-    <div class="page">
-      <header class="header">
+    <page class="page body__margin">
+      <div class="page__left-side"></div>
+      <div class="page__right-side"></div>
+      <header class="header page__header">
         <img
           src="./images/around_the_us.svg"
           class="header__image"
@@ -28,96 +30,92 @@
         />
         <span class="header__line"></span>
       </header>
-      <main>
-        <section class="profile">
-          <div class="avatar profile__image">
-            <img
-              src="./images/jacques-cousteau.jpg"
-              class="avatar__image"
-              alt="profile image of JacquesCousteau"
-            />
+      <section class="profile page__profile">
+        <img
+          src="./images/jacques-cousteau.jpg"
+          class="avatar profile__avatar"
+          alt="profile image of JacquesCousteau"
+        />
+        <div class="profile__info">
+          <div class="profile__name-pen">
+            <p class="profile__name">JacquesCousteau</p>
+            <img src="./images/pen.svg" class="profile__pen" />
           </div>
-          <div class="profile__info">
-            <div class="profile__name-pen">
-              <p class="profile__name">JacquesCousteau</p>
-              <img src="./images/pen.svg" class="profile__pen" />
-            </div>
-            <p class="profile__name-tag">Explorer</p>
-          </div>
+          <p class="profile__name-tag">Explorer</p>
+        </div>
+        <img
+          src="./images/plus.svg"
+          class="profile__add-button"
+          alt="Add image"
+        />
+      </section>
+      <section class="content page__content">
+        <div class="card">
           <img
-            src="./images/plus.svg"
-            class="profile__add-button"
-            alt="Add image"
+            src="./images/yosemite-valley.jpg"
+            class="card__image"
+            alt="Yosemite"
           />
-        </section>
-        <section class="collection main__collection">
-          <div class="card">
-            <img
-              src="./images/yosemite-valley.jpg"
-              class="card__image"
-              alt="Yosemite"
-            />
-            <div class="card__label">
-              <p class="card__label-text">Yosemite Valley</p>
-              <img src="./images/heart.svg" class="card__heart" />
-            </div>
+          <div class="card__label">
+            <p class="card__label-text">Yosemite Valley</p>
+            <img src="./images/heart.svg" class="card__heart" />
           </div>
-          <div class="card">
-            <img
-              src="./images/lake-louise.png"
-              class="card__image"
-              alt="Lake Louise"
-            />
-            <div class="card__label">
-              <p class="card__label-text">Lake Louise</p>
-              <img src="./images/heart.svg" class="card__heart" />
-            </div>
+        </div>
+        <div class="card">
+          <img
+            src="./images/lake-louise.png"
+            class="card__image"
+            alt="Lake Louise"
+          />
+          <div class="card__label">
+            <p class="card__label-text">Lake Louise</p>
+            <img src="./images/heart.svg" class="card__heart" />
           </div>
-          <div class="card">
-            <img
-              src="./images/bald-mountains.png"
-              class="card__image"
-              alt="Bald Mountains"
-            />
-            <div class="card__label">
-              <p class="card__label-text">Bald Mountains</p>
-              <img src="./images/heart.svg" class="card__heart" />
-            </div>
+        </div>
+        <div class="card">
+          <img
+            src="./images/bald-mountains.png"
+            class="card__image"
+            alt="Bald Mountains"
+          />
+          <div class="card__label">
+            <p class="card__label-text">Bald Mountains</p>
+            <img src="./images/heart.svg" class="card__heart" />
           </div>
-          <div class="card">
-            <img src="./images/latemar.png" class="card__image" alt="Latemar" />
-            <div class="card__label">
-              <p class="card__label-text">Latemar</p>
-              <img src="./images/heart.svg" class="card__heart" />
-            </div>
+        </div>
+        <div class="card">
+          <img src="./images/latemar.png" class="card__image" alt="Latemar" />
+          <div class="card__label">
+            <p class="card__label-text">Latemar</p>
+            <img src="./images/heart.svg" class="card__heart" />
           </div>
-          <div class="card">
-            <img
-              src="./images/vanoise-national-park.png"
-              class="card__image"
-              alt="Vanoise National Park"
-            />
-            <div class="card__label">
-              <p class="card__label-text">Vanoise National Park</p>
-              <img src="./images/heart.svg" class="card__heart" />
-            </div>
+        </div>
+        <div class="card">
+          <img
+            src="./images/vanoise-national-park.png"
+            class="card__image"
+            alt="Vanoise National Park"
+          />
+          <div class="card__label">
+            <p class="card__label-text">Vanoise National Park</p>
+            <img src="./images/heart.svg" class="card__heart" />
           </div>
-          <div class="card">
-            <img
-              src="./images/lago-di-braies.png"
-              class="card__image"
-              alt="Lago di Braies"
-            />
-            <div class="card__label">
-              <p class="card__label-text">Lago di Braies</p>
-              <img src="./images/heart.svg" class="card__heart" />
-            </div>
+        </div>
+        <div class="card">
+          <img
+            src="./images/lago-di-braies.png"
+            class="card__image"
+            alt="Lago di Braies"
+          />
+          <div class="card__label">
+            <p class="card__label-text">Lago di Braies</p>
+            <img src="./images/heart.svg" class="card__heart" />
           </div>
-        </section>
-      </main>
-      <footer class="footer">
+        </div>
+      </section>
+      <footer class="footer page__footer">
         <p class="footer__text">© 2022 Around The U.S.</p>
       </footer>
-    </div>
+    </page>
   </body>
 </html>
