--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Noto+Serif&display=swap"
     />
     <link rel="icon" type="image/x-icon" href="./favicon.ico" />
-    <title>Practicum Coffee Shop</title>
+    <title>Around The U.S.</title>
   </head>
   <body class="body">
-    <page class="page body__margin">
+    <div class="page">
       <div class="page__left-side"></div>
       <div class="page__right-side"></div>
       <header class="header page__header">
@@ -30,92 +30,122 @@
         />
         <span class="header__line"></span>
       </header>
-      <section class="profile page__profile">
-        <img
-          src="./images/jacques-cousteau.jpg"
-          class="avatar profile__avatar"
-          alt="profile image of JacquesCousteau"
-        />
-        <div class="profile__info">
-          <div class="profile__name-pen">
-            <p class="profile__name">JacquesCousteau</p>
-            <img src="./images/pen.svg" class="profile__pen" />
-          </div>
-          <p class="profile__name-tag">Explorer</p>
-        </div>
-        <img
-          src="./images/plus.svg"
-          class="profile__add-button"
-          alt="Add image"
-        />
-      </section>
-      <section class="content page__content">
-        <div class="card">
+      <main>
+        <div class="profile page__profile">
           <img
-            src="./images/yosemite-valley.jpg"
-            class="card__image"
-            alt="Yosemite"
+            src="./images/jacques-cousteau.jpg"
+            class="avatar profile__avatar"
+            alt="profile image of JacquesCousteau"
           />
-          <div class="card__label">
-            <p class="card__label-text">Yosemite Valley</p>
-            <img src="./images/heart.svg" class="card__heart" />
+          <div class="profile__info">
+            <div class="profile__name-pen">
+              <h1 class="profile__name">JacquesCousteau</h1>
+              <img
+                src="./images/pen.svg"
+                class="profile__pen"
+                alt="Edit image"
+              />
+            </div>
+            <h2 class="profile__name-tag">Explorer</h2>
           </div>
-        </div>
-        <div class="card">
           <img
-            src="./images/lake-louise.png"
-            class="card__image"
-            alt="Lake Louise"
+            src="./images/plus.svg"
+            class="profile__add-button"
+            alt="Add image"
           />
-          <div class="card__label">
-            <p class="card__label-text">Lake Louise</p>
-            <img src="./images/heart.svg" class="card__heart" />
+        </div>
+        <div class="content page__content">
+          <div class="card">
+            <img
+              src="./images/yosemite-valley.jpg"
+              class="card__image"
+              alt="Yosemite"
+            />
+            <div class="card__label">
+              <p class="card__label-text">Yosemite Valley</p>
+              <img
+                src="./images/heart.svg"
+                class="card__heart"
+                alt="heart image"
+              />
+            </div>
+          </div>
+          <div class="card">
+            <img
+              src="./images/lake-louise.png"
+              class="card__image"
+              alt="Lake Louise"
+            />
+            <div class="card__label">
+              <p class="card__label-text">Lake Louise</p>
+              <img
+                src="./images/heart.svg"
+                class="card__heart"
+                alt="heart image"
+              />
+            </div>
+          </div>
+          <div class="card">
+            <img
+              src="./images/bald-mountains.png"
+              class="card__image"
+              alt="Bald Mountains"
+            />
+            <div class="card__label">
+              <p class="card__label-text">Bald Mountains</p>
+              <img
+                src="./images/heart.svg"
+                class="card__heart"
+                alt="heart image"
+              />
+            </div>
+          </div>
+          <div class="card">
+            <img src="./images/latemar.png" class="card__image" alt="Latemar" />
+            <div class="card__label">
+              <p class="card__label-text">Latemar</p>
+              <img
+                src="./images/heart.svg"
+                class="card__heart"
+                alt="heart image"
+              />
+            </div>
+          </div>
+          <div class="card">
+            <img
+              src="./images/vanoise-national-park.png"
+              class="card__image"
+              alt="Vanoise National Park"
+            />
+            <div class="card__label">
+              <p class="card__label-text">Vanoise National Park</p>
+              <img
+                src="./images/heart.svg"
+                class="card__heart"
+                alt="heart image"
+              />
+            </div>
+          </div>
+          <div class="card">
+            <img
+              src="./images/lago-di-braies.png"
+              class="card__image"
+              alt="Lago di Braies"
+            />
+            <div class="card__label">
+              <p class="card__label-text">Lago di Braies</p>
+              <img
+                src="./images/heart.svg"
+                class="card__heart"
+                alt="heart image"
+              />
+            </div>
           </div>
         </div>
-        <div class="card">
-          <img
-            src="./images/bald-mountains.png"
-            class="card__image"
-            alt="Bald Mountains"
-          />
-          <div class="card__label">
-            <p class="card__label-text">Bald Mountains</p>
-            <img src="./images/heart.svg" class="card__heart" />
-          </div>
-        </div>
-        <div class="card">
-          <img src="./images/latemar.png" class="card__image" alt="Latemar" />
-          <div class="card__label">
-            <p class="card__label-text">Latemar</p>
-            <img src="./images/heart.svg" class="card__heart" />
-          </div>
-        </div>
-        <div class="card">
-          <img
-            src="./images/vanoise-national-park.png"
-            class="card__image"
-            alt="Vanoise National Park"
-          />
-          <div class="card__label">
-            <p class="card__label-text">Vanoise National Park</p>
-            <img src="./images/heart.svg" class="card__heart" />
-          </div>
-        </div>
-        <div class="card">
-          <img
-            src="./images/lago-di-braies.png"
-            class="card__image"
-            alt="Lago di Braies"
-          />
-          <div class="card__label">
-            <p class="card__label-text">Lago di Braies</p>
-            <img src="./images/heart.svg" class="card__heart" />
-          </div>
-        </div>
-      </section>
+      </main>
       <footer class="footer page__footer">
         <p class="footer__text">© 2022 Around The U.S.</p>
       </footer>
-    </page>
+    </div>
   </body>
 </html>
