--- a/index.html
+++ b/index.html
@@ -11,11 +11,7 @@
     />
     <meta name="author" content="Sekhar Mekala" />
     <link rel="stylesheet" href="./pages/index.css" />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Noto+Serif&display=swap"
-    />
-    <link rel="icon" type="image/x-icon" href="./favicon.ico" />
+    <!--link rel="icon" type="image/x-icon" href="./favicon.ico" /-->
     <title>Around The U.S.</title>
   </head>
   <body class="body">
