some formatting corrections

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
       content="HTML, CSS, grid layout, flex-box, around the us landing page"
     />
     <meta name="author" content="Sekhar Mekala" />
-    <link rel="stylesheet" href="./pages/index.css" />
+    <link rel="stylesheet" href="../se_project_aroundtheus/pages/index.css" />
     <!--link rel="icon" type="image/x-icon" href="./favicon.ico" /-->
     <title>Around The U.S.</title>
   </head>
   <body class="body">
     <div class="page">
-      <header class="header page__header">
+      <header class="header">
         <img
           src="./images/around_the_us.svg"
           class="header__image"
@@ -24,7 +24,7 @@
         />
         <span class="header__line"></span>
       </header>
-      <div class="profile page__profile">
+      <div class="profile">
         <img
           src="./images/jacques-cousteau.jpg"
           class="avatar profile__avatar"
@@ -32,7 +32,7 @@
         />
         <div class="profile__info">
           <div class="profile__name-pen">
-            <h1 class="profile__name">JacquesCousteau</h1>
+            <h1 class="profile__name">Jacques Cousteau</h1>
             <img src="./images/pen.svg" class="profile__pen" alt="Edit image" />
           </div>
           <h2 class="profile__name-tag">Explorer</h2>
@@ -131,7 +131,7 @@
           </div>
         </div>
       </div>
-      <footer class="footer page__footer">
+      <footer class="footer">
         <p class="footer__text">© 2022 Around The U.S.</p>
       </footer>
     </div>
