Some corrections to fix layout

--- a/index.html
+++ b/index.html
@@ -25,17 +25,23 @@
         <span class="header__line"></span>
       </header>
       <div class="profile">
-        <img
-          src="./images/jacques-cousteau.jpg"
-          class="avatar profile__avatar"
-          alt="profile image of JacquesCousteau"
-        />
-        <div class="profile__info">
-          <div class="profile__name-pen">
-            <h1 class="profile__name">Jacques Cousteau</h1>
-            <img src="./images/pen.svg" class="profile__pen" alt="Edit image" />
+        <div class="profile__avatar-info">
+          <img
+            src="./images/jacques-cousteau.jpg"
+            class="avatar profile__avatar"
+            alt="profile image of JacquesCousteau"
+          />
+          <div class="profile__info">
+            <div class="profile__name-pen">
+              <h1 class="profile__name">Jacques Cousteau</h1>
+              <img
+                src="./images/pen.svg"
+                class="profile__pen"
+                alt="Edit image"
+              />
+            </div>
+            <h2 class="profile__name-tag">Explorer</h2>
           </div>
-          <h2 class="profile__name-tag">Explorer</h2>
         </div>
         <img
           src="./images/plus.svg"
