Fixed some validtation errors

--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
           <div class="profile__info">
             <div class="profile__name-pen">
               <h1 class="profile__name">Jacques Cousteau</h1>
-              <button class="profile__pen" type="edit"></button>
+              <button class="profile__pen" type="reset"></button>
             </div>
             <p class="profile__name-tag">Explorer</p>
           </div>
         </div>
-        <button class="profile__add-button" type="add"></button>
+        <button class="profile__add-button" type="reset"></button>
       </div>
       <!--here ul-->
       <ul class="content">
@@ -85,8 +85,9 @@
               class="card__heart"
               alt="heart image"
             />
-          </li>
-        
+          </div>
+        </li>
+
         <li class="card content__card">
           <img src="./images/latemar.png" class="card__image" alt="Latemar" />
           <div class="card__label">
