--- a/index.html
+++ b/index.html
@@ -23,114 +23,98 @@
           alt="header image"
         />
       </header>
-      <div class="profile">
-        <div class="profile__avatar-info">
-          <img
-            src="./images/jacques-cousteau.jpg"
-            class="avatar profile__avatar"
-            alt="profile image of JacquesCousteau"
-          />
-          <div class="profile__info">
-            <div class="profile__name-pen">
-              <h1 class="profile__name">Jacques Cousteau</h1>
-              <button class="profile__pen" type="reset"></button>
+      <main>
+        <section class="profile">
+          <div class="profile__avatar-info">
+            <img
+              src="./images/jacques-cousteau.jpg"
+              class="avatar profile__avatar"
+              alt="profile image of JacquesCousteau"
+            />
+            <div class="profile__info">
+              <div class="profile__name-pen">
+                <h1 class="profile__name">Jacques Cousteau</h1>
+                <button class="profile__pen" type="button"></button>
+              </div>
+              <p class="profile__name-tag">Explorer</p>
             </div>
-            <p class="profile__name-tag">Explorer</p>
           </div>
-        </div>
-        <button class="profile__add-button" type="reset"></button>
-      </div>
-      <!--here ul-->
-      <ul class="content">
-        <li class="card content__card">
-          <img
-            src="./images/yosemite-valley.jpg"
-            class="card__image"
-            alt="Yosemite"
-          />
-          <div class="card__label">
-            <p class="card__label-text">Yosemite Valley</p>
-            <img
-              src="./images/heart.svg"
-              class="card__heart"
-              alt="heart image"
-            />
-          </div>
-        </li>
-        <li class="card content__card">
-          <img
-            src="./images/lake-louise.png"
-            class="card__image"
-            alt="Lake Louise"
-          />
-          <div class="card__label">
-            <p class="card__label-text">Lake Louise</p>
-            <img
-              src="./images/heart.svg"
-              class="card__heart"
-              alt="heart image"
-            />
-          </div>
-        </li>
-        <li class="card content__card">
-          <img
-            src="./images/bald-mountains.png"
-            class="card__image"
-            alt="Bald Mountains"
-          />
-          <div class="card__label">
-            <p class="card__label-text">Bald Mountains</p>
-            <img
-              src="./images/heart.svg"
-              class="card__heart"
-              alt="heart image"
-            />
-          </div>
-        </li>
+          <button class="profile__add-button" type="button"></button>
+        </section>
+        <!--here ul-->
+        <section class="content">
+          <ul class="content__list">
+            <li class="card">
+              <img
+                src="./images/yosemite-valley.jpg"
+                class="card__image"
+                alt="Yosemite"
+              />
+              <div class="card__label">
+                <h2 class="card__label-text">Yosemite Valley</h2>
+                <button class="card__heart" type="button"></button>
+              </div>
+            </li>
+            <li class="card">
+              <img
+                src="./images/lake-louise.png"
+                class="card__image"
+                alt="Lake Louise"
+              />
+              <div class="card__label">
+                <h2 class="card__label-text">Lake Louise</h2>
+                <button class="card__heart" type="button"></button>
+              </div>
+            </li>
+            <li class="card">
+              <img
+                src="./images/bald-mountains.png"
+                class="card__image"
+                alt="Bald Mountains"
+              />
+              <div class="card__label">
+                <h2 class="card__label-text">Bald Mountains</h2>
+                <button class="card__heart" type="button"></button>
+              </div>
+            </li>
 
-        <li class="card content__card">
-          <img src="./images/latemar.png" class="card__image" alt="Latemar" />
-          <div class="card__label">
-            <p class="card__label-text">Latemar</p>
-            <img
-              src="./images/heart.svg"
-              class="card__heart"
-              alt="heart image"
-            />
-          </div>
-        </li>
-        <li class="card content__card">
-          <img
-            src="./images/vanoise-national-park.png"
-            class="card__image"
-            alt="Vanoise National Park"
-          />
-          <div class="card__label">
-            <p class="card__label-text">Vanoise National Park</p>
-            <img
-              src="./images/heart.svg"
-              class="card__heart"
-              alt="heart image"
-            />
-          </div>
-        </li>
-        <li class="card content__card">
-          <img
-            src="./images/lago-di-braies.png"
-            class="card__image"
-            alt="Lago di Braies"
-          />
-          <div class="card__label">
-            <p class="card__label-text">Lago di Braies</p>
-            <img
-              src="./images/heart.svg"
-              class="card__heart"
-              alt="heart image"
-            />
-          </div>
-        </li>
-      </ul>
-      <!--here ul-->
+            <li class="card">
+              <img
+                src="./images/latemar.png"
+                class="card__image"
+                alt="Latemar"
+              />
+              <div class="card__label">
+                <h2 class="card__label-text">Latemar</h2>
+                <button class="card__heart" type="button"></button>
+              </div>
+            </li>
+            <li class="card">
+              <img
+                src="./images/vanoise-national-park.png"
+                class="card__image"
+                alt="Vanoise National Park"
+              />
+              <div class="card__label">
+                <h2 class="card__label-text">Vanoise National Park</h2>
+                <button class="card__heart" type="button"></button>
+              </div>
+            </li>
+            <li class="card">
+              <img
+                src="./images/lago-di-braies.png"
+                class="card__image"
+                alt="Lago di Braies"
+              />
+              <div class="card__label">
+                <h2 class="card__label-text">Lago di Braies</h2>
+                <button class="card__heart" type="button"></button>
+              </div>
+            </li>
+          </ul>
+          <!--here ul-->
+        </section>
+      </main>
       <footer class="footer">
         <p class="footer__text">© 2022 Around The U.S.</p>
       </footer>
