Sprint 4 project part 2

--- a/index.html
+++ b/index.html
@@ -119,6 +119,23 @@
         <p class="footer__text">© 2022 Around The U.S.</p>
       </footer>
     </div>
+    <div class="modal">
+      <div class="modal__container">
+        <!--div class="modal__with-close"-->
+        <button class="modal__close" type="button"></button>
+        <div class="modal__content">
+          <h3 class="modal__heading">Edit Profile</h3>
+          <form class="modal__form">
+            <input type="text" class="modal__text" value="Name" />
+            <span class="modal__name-line"></span>
+            <input type="text" class="modal__text" value="Description" />
+            <span class="modal__description-line"></span>
+            <button type="submit" class="modal__button">Save</button>
+          </form>
+        </div>
+        <!--/div-->
+      </div>
+    </div>
     <script src="./scripts/index.js"></script>
   </body>
 </html>
