Sprint 4 project part 2

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <p class="footer__text">© 2022 Around The U.S.</p>
       </footer>
     </div>
-    <div class="modal">
+    <div class="modal modal__open">
       <div class="modal__container">
         <!--div class="modal__with-close"-->
         <button class="modal__close" type="button"></button>
