Before implementing the template logic

--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@
         <div class="modal__content">
           <h3 class="modal__heading">Edit Profile</h3>
           <form class="modal__form">
-            <input type="text" class="modal__text" value="Name" />
+            <input type="text" class="modal__name-text" value="Name" />
             <span class="modal__name-line"></span>
-            <input type="text" class="modal__text" value="Description" />
+            <input type="text" class="modal__job-text" value="Description" />
             <span class="modal__description-line"></span>
             <button type="submit" class="modal__button">Save</button>
           </form>
