Demo of image size issue

--- a/index.html
+++ b/index.html
@@ -136,6 +136,15 @@
         <!--/div-->
       </div>
     </div>
+    <template id="card">
+      <li class="card">
+        <img class="card__image" />
+        <div class="card__label">
+          <h2 class="card__label-text"></h2>
+          <button class="card__heart" type="button"></button>
+        </div>
+      </li>
+    </template>
     <script src="./scripts/index.js"></script>
   </body>
 </html>
