Sprint-4 project part-4

--- a/index.html
+++ b/index.html
@@ -41,78 +41,8 @@
           </div>
           <button class="profile__add-button" type="button"></button>
         </section>
-        <!--here ul-->
         <section class="content">
-          <ul class="content__list">
-            <li class="card">
-              <img
-                src="./images/yosemite-valley.jpg"
-                class="card__image"
-                alt="Yosemite"
-              />
-              <div class="card__label">
-                <h2 class="card__label-text">Yosemite Valley</h2>
-                <button class="card__heart" type="button"></button>
-              </div>
-            </li>
-            <li class="card">
-              <img
-                src="./images/lake-louise.png"
-                class="card__image"
-                alt="Lake Louise"
-              />
-              <div class="card__label">
-                <h2 class="card__label-text">Lake Louise</h2>
-                <button class="card__heart" type="button"></button>
-              </div>
-            </li>
-            <li class="card">
-              <img
-                src="./images/bald-mountains.png"
-                class="card__image"
-                alt="Bald Mountains"
-              />
-              <div class="card__label">
-                <h2 class="card__label-text">Bald Mountains</h2>
-                <button class="card__heart" type="button"></button>
-              </div>
-            </li>
-
-            <li class="card">
-              <img
-                src="./images/latemar.png"
-                class="card__image"
-                alt="Latemar"
-              />
-              <div class="card__label">
-                <h2 class="card__label-text">Latemar</h2>
-                <button class="card__heart" type="button"></button>
-              </div>
-            </li>
-            <li class="card">
-              <img
-                src="./images/vanoise-national-park.png"
-                class="card__image"
-                alt="Vanoise National Park"
-              />
-              <div class="card__label">
-                <h2 class="card__label-text">Vanoise National Park</h2>
-                <button class="card__heart" type="button"></button>
-              </div>
-            </li>
-            <li class="card">
-              <img
-                src="./images/lago-di-braies.png"
-                class="card__image"
-                alt="Lago di Braies"
-              />
-              <div class="card__label">
-                <h2 class="card__label-text">Lago di Braies</h2>
-                <button class="card__heart" type="button"></button>
-              </div>
-            </li>
-          </ul>
-          <!--here ul-->
+          <ul class="content__list"></ul>
         </section>
       </main>
       <footer class="footer">
@@ -121,7 +51,6 @@
     </div>
     <div class="modal modal__open">
       <div class="modal__container">
-        <!--div class="modal__with-close"-->
         <button class="modal__close" type="button"></button>
         <div class="modal__content">
           <h3 class="modal__heading">Edit Profile</h3>
@@ -133,7 +62,6 @@
             <button type="submit" class="modal__button">Save</button>
           </form>
         </div>
-        <!--/div-->
       </div>
     </div>
     <template id="card">
