--- a/index.html
+++ b/index.html
@@ -49,17 +49,27 @@
         <p class="footer__text">© 2022 Around The U.S.</p>
       </footer>
     </div>
-    <div class="modal modal__open">
-      <div class="modal__container">
-        <button class="modal__close" type="button"></button>
-        <div class="modal__content">
-          <h3 class="modal__heading">Edit Profile</h3>
-          <form class="modal__form">
-            <input type="text" class="modal__name-text" value="Name" />
-            <span class="modal__name-line"></span>
-            <input type="text" class="modal__job-text" value="Description" />
-            <span class="modal__description-line"></span>
-            <button type="submit" class="modal__button">Save</button>
+    <div class="profile-modal">
+      <div class="profile-modal__container">
+        <button class="profile-modal__close" type="button"></button>
+        <div class="profile-modal__content">
+          <h3 class="profile-modal__heading">Edit Profile</h3>
+          <form class="profile-modal__form">
+            <input
+              type="text"
+              class="profile-modal__name-text"
+              value="Name"
+              required
+            />
+            <span class="profile-modal__name-line"></span>
+            <input
+              type="text"
+              class="profile-modal__job-text"
+              value="Description"
+              required
+            />
+            <span class="profile-modal__description-line"></span>
+            <button type="submit" class="profile-modal__button">Save</button>
           </form>
         </div>
       </div>
