Incorporate review comments/suggestions

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
         <p class="footer__text">© 2022 Around The U.S.</p>
       </footer>
     </div>
-    <div class="profile-modal">
-      <div class="profile-modal__container">
+    <div class="modal">
+      <div class="profile-modal">
         <button class="profile-modal__close" type="button"></button>
         <div class="profile-modal__content">
           <h3 class="profile-modal__heading">Edit Profile</h3>
