--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       <li class="card">
         <div class="card__image-and-delete">
           <img class="card__image" />
-          <img class="card__delete" />
+          <button class="card__delete" type="button"></button>
         </div>
         <div class="card__label">
           <h2 class="card__label-text"></h2>
