--- a/index.html
+++ b/index.html
@@ -101,6 +101,16 @@
       </div>
     </div>
 
+    <div class="modal">
+      <div class="image-modal-container">
+        <button class="image-modal-container__close" type="button"></button>
+        <div class="image-modal">
+          <img class="image-modal__expanded" />
+          <p class="image-modal__label"></p>
+        </div>
+      </div>
+    </div>
+
     <template id="card">
       <li class="card">
         <div class="card__image-and-delete">
