sprint 5 project submission 2

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
               required
             />
             <span class="add-card-modal__image-url-line"></span>
-            <button type="submit" class="add-card-modal__button">Create</button>
+            <button type="submit" class="add-card-modal__button">Save</button>
           </form>
         </div>
       </div>
@@ -103,7 +103,7 @@
 
     <div class="modal">
       <div class="image-modal-container">
-        <button class="image-modal-container__close" type="button"></button>
+        <button type="button" class="image-modal-container__close"></button>
         <div class="image-modal">
           <img class="image-modal__expanded" />
           <p class="image-modal__label"></p>
