--- a/index.html
+++ b/index.html
@@ -54,22 +54,50 @@
         <button class="profile-modal__close" type="button"></button>
         <div class="profile-modal__content">
           <h3 class="profile-modal__heading">Edit Profile</h3>
-          <form class="profile-modal__form">
-            <input
-              type="text"
-              class="profile-modal__name-text"
-              placeholder="Name"
-              required
-            />
-            <span class="profile-modal__name-line"></span>
-            <input
-              type="text"
-              class="profile-modal__job-text"
-              placeholder="Description"
-              required
-            />
-            <span class="profile-modal__description-line"></span>
-            <button type="submit" class="profile-modal__button">Save</button>
+          <form
+            name="profile-modal__form"
+            class="profile-modal__form"
+            novalidate
+          >
+            <label class="profile-modal__label">
+              <input
+                type="text"
+                class="profile-modal__name-text"
+                placeholder="Name"
+                required
+                minlength="2"
+                maxlength="40"
+                id="profile-modal-name"
+              />
+              <span class="profile-modal__name-line"></span>
+              <span
+                class="profile-modal__form-error"
+                id="profile-modal-name-error"
+              ></span>
+            </label>
+            <label class="profile-modal__label">
+              <input
+                type="text"
+                class="profile-modal__job-text"
+                placeholder="Description"
+                required
+                minlength="2"
+                maxlength="200"
+                id="profile-modal-job"
+              />
+              <span class="profile-modal__description-line"></span>
+              <span
+                class="profile-modal__form-error"
+                id="profile-modal-job-error"
+              ></span>
+            </label>
+            <button
+              id="profile-modal__button"
+              type="submit"
+              class="profile-modal__button"
+            >
+              Save
+            </button>
           </form>
         </div>
       </div>
