--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@
         </div>
       </li>
     </template>
-    <script src="./scripts/index.js"></script>
+    <script src="./scripts/validation.js" type="module"></script>
+    <script src="./scripts/index.js" type="module"></script>
   </body>
 </html>
