--- a/index.html
+++ b/index.html
@@ -91,11 +91,7 @@
                 id="profile-modal-job-error"
               ></span>
             </label>
-            <button
-              id="profile-modal__button"
-              type="submit"
-              class="profile-modal__button"
-            >
+            <button type="submit" class="profile-modal__button" disabled>
               Save
             </button>
           </form>
@@ -143,11 +139,7 @@
                 id="add-card-modal-image-error"
               ></span>
             </label>
-            <button
-              id="add-card-modal__button"
-              type="submit"
-              class="add-card-modal__button"
-            >
+            <button type="submit" class="add-card-modal__button" disabled>
               Save
             </button>
           </form>
