--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <h3 class="profile-modal__heading">Edit Profile</h3>
           <form
             name="profile-modal__form"
-            class="profile-modal__form"
+            class="profile-modal__form modal__form"
             novalidate
           >
             <label class="profile-modal__label">
@@ -105,7 +105,7 @@
         <div class="add-card-modal__content">
           <h3 class="add-card-modal__heading">New Place</h3>
           <form
-            class="add-card-modal__form"
+            class="add-card-modal__form modal__form"
             name="add-card-modal__form"
             novalidate
           >
