--- a/index.html
+++ b/index.html
@@ -156,5 +156,8 @@
     </template>
     <script src="./scripts/validation.js" type="module"></script>
     <script src="./scripts/index.js" type="module"></script>
+    <script src="./scripts/Card.js" type="module"></script>
+    <script src="./scripts/utils.js" type="module"></script>
+    <script src="./scripts/FormValidator.js" type="module"></script>
   </body>
 </html>
