--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <button class="modal__close" type="button"></button>
         <div class="modal__content">
           <h3 class="modal__heading">Edit Profile</h3>
-          <form class="modal__form" novalidate>
+          <form class="modal__form" name="profile-edit" novalidate>
             <label class="modal__label">
               <input
                 type="text"
@@ -98,7 +98,7 @@
         <button class="modal__close" type="button"></button>
         <div class="modal__content">
           <h3 class="modal__heading">New Place</h3>
-          <form class="modal__form" novalidate>
+          <form class="modal__form" name="add-card" novalidate>
             <label class="modal__label">
               <input
                 type="text"
@@ -154,7 +154,6 @@
         </div>
       </li>
     </template>
-    <script src="./scripts/validation.js" type="module"></script>
     <script src="./scripts/index.js" type="module"></script>
     <script src="./scripts/Card.js" type="module"></script>
     <script src="./scripts/utils.js" type="module"></script>
