--- a/src/index.html
+++ b/src/index.html
@@ -65,6 +65,7 @@
                 minlength="2"
                 maxlength="40"
                 id="profile-modal-name"
+                name="profile-modal-name"
               />
               <span class="modal__line"></span>
               <span
@@ -81,6 +82,7 @@
                 minlength="2"
                 maxlength="200"
                 id="profile-modal-job"
+                name="profile-modal-job"
               />
               <span class="modal__line"></span>
               <span
@@ -109,6 +111,7 @@
                 id="add-card-title"
                 minlength="1"
                 maxlength="30"
+                name="add-card-title"
               />
               <span class="modal__line"></span>
               <span class="modal__input-error" id="add-card-title-error"></span>
@@ -120,6 +123,7 @@
                 placeholder="Image Link"
                 required
                 id="add-card-image-url"
+                name="add-card-image-url"
               />
               <span class="modal__line"></span>
               <span
