--- a/src/index.html
+++ b/src/index.html
@@ -155,7 +155,10 @@
         </div>
         <div class="card__label">
           <h2 class="card__label-text"></h2>
-          <button class="card__heart" type="button"></button>
+          <div class="card__heart-and-likes">
+            <button class="card__heart" type="button"></button>
+            <p class="card__likes"></p>
+          </div>
         </div>
       </li>
     </template>
